--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bezhansalleh/filament-language-switch": "^3.0",
         "filament/filament": "3.2",
         "filament/spatie-laravel-media-library-plugin": "3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
