--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "althinect/filament-spatie-roles-permissions": "^2.2",
         "bezhansalleh/filament-language-switch": "^3.0",
         "filament/filament": "3.2",
         "filament/spatie-laravel-media-library-plugin": "3.0-stable",
@@ -20,7 +21,9 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
-        "spatie/laravel-medialibrary": "^10.15"
+        "spatie/laravel-medialibrary": "^10.15",
+        "spatie/laravel-model-status": "^1.14",
+        "spatie/laravel-permission": "^6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
