--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "require": {
         "php": "^8.1",
         "althinect/filament-spatie-roles-permissions": "^2.2",
-        "bezhansalleh/filament-language-switch": "^3.0",
         "filament/filament": "3.2",
         "filament/spatie-laravel-media-library-plugin": "3.0-stable",
+        "filament/spatie-laravel-tags-plugin": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "joshembling/image-optimizer": "v1.2",
         "kilobyteno/laravel-user-guest-like": "^1.2",
@@ -22,7 +22,6 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
         "spatie/laravel-medialibrary": "^10.15",
-        "spatie/laravel-model-status": "^1.14",
         "spatie/laravel-permission": "^6.4"
     },
     "require-dev": {
