--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "aymanalhattami/filament-page-with-sidebar": "^2.4",
         "filament/filament": "3.2",
         "filament/spatie-laravel-media-library-plugin": "3.0-stable",
         "filament/spatie-laravel-tags-plugin": "3.2",
