feat: merge and update dashboard

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-markdown": "^2.5",
         "spatie/laravel-medialibrary": "^10.15",
         "spatie/laravel-permission": "^6.4"
     },
